apps/darak/production/networking/mtls/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: darak-prod-mtls-route
  namespace: darak-prod
spec:
  parentRefs:
  - name: darak-prod-mtls
    namespace: darak-prod
  hostnames:
  - "home.darak.dev"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs: []
